quilt-sync/src/assets/css/views/installed-package-item.css
.qui-installed-package-item {
  align-items: center;
  display: flex;
  justify-content: space-between;
  list-style: none;
  padding: 0 var(--q-ui-size-4) 0 0;
  position: relative;

  &:hover {
    background: var(--q-ui-palette-action-hover);
  }

  &.error {
    border-left: 3px solid var(--q-ui-palette-error);
  }

  .link {
    flex-grow: 1;
    overflow: hidden;
    padding: 14px var(--q-ui-size-2) 14px var(--q-ui-size-4);
    text-decoration: none;
    color: inherit;
  }

  .item-primary {
    display: block;
    font-size: 1rem;
    line-height: 1.5;
  }

  .item-secondary {
    color: var(--q-ui-palette-text-secondary);
    display: block;
    font-size: 0.875rem;
    line-height: 1.43;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  .menu {
    flex-shrink: 0;
    opacity: 0.3;
    transition: opacity 0.15s ease;
  }

  &:hover .menu {
    opacity: 1;
  }

  .menu-list {
    align-items: center;
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
  }

  .menu-item + .menu-item {
    margin-left: 8px;
  }

  .menu-divider {
    background: var(--q-ui-palette-border);
    box-shadow: -1px 0 0 rgb(255 255 255 / 30%);
    height: 16px;
    width: 1px;
  }

  .menu-item + .menu-divider {
    margin-left: 12px;
  }

  .menu-divider + .menu-item {
    margin-left: 12px;
  }
}

